--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.elte.hadoop</groupId>
+	<groupId>edu.elte.hadoop</groupId>
 	<artifactId>loris.server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
@@ -12,6 +12,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<repositories>
@@ -40,7 +42,6 @@
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-hdfs</artifactId>
 			<version>2.5.0-cdh5.3.2</version>
-
 		</dependency>
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
@@ -57,25 +58,36 @@
 			<artifactId>hive-jdbc</artifactId>
 			<version>1.1.0</version>
 		</dependency>
-		<!-- <dependency> <groupId>org.apache.hadoop</groupId> <artifactId>hadoop-common</artifactId> 
-			<version>2.6.0</version> </dependency> -->
+		<dependency>
+			<groupId>org.apache.avro</groupId>
+			<artifactId>avro</artifactId>
+			<version>1.7.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.avro</groupId>
+			<artifactId>avro-mapred</artifactId>
+			<version>1.7.7</version>
+		</dependency>
+		<!-- ROME RSS -->
+		<dependency>
+			<groupId>rome</groupId>
+			<artifactId>rome</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>rome</groupId>
+			<artifactId>rome-fetcher</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>xerces</groupId>
+			<artifactId>xercesImpl</artifactId>
+			<version>2.11.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
-			<!-- COMPILE -->
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.3</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-					<compilerArguments>
-						<endorseddirs>${project.build.directory}/endorsed</endorseddirs>
-					</compilerArguments>
-				</configuration>
-			</plugin>
-
 			<!-- JAXWS -->
 			<plugin>
 				<groupId>org.jvnet.jax-ws-commons</groupId>
@@ -84,85 +96,36 @@
 				<executions>
 					<execution>
 						<goals>
-							<goal>wsimport</goal>
+							<goal>wsgen</goal>
 						</goals>
 					</execution>
 				</executions>
+
 				<configuration>
 					<!-- SERVICE NAME -->
-					<packageName>org.mako.lastproto.MyServiceImpl</packageName>
+					<sei>edu.elte.hadoop.loris.server.Publisher</sei>
+					<!-- <sourceDestDir>src/main/java</sourceDestDir> -->
+					<!-- <packageName>edu.mako.lastproto.MyServiceImpl</packageName> -->
+<!-- 					<genWsdl>true</genWsdl> -->
+<!-- 					<keep>true</keep> -->
 				</configuration>
-
-				<dependencies>
-					<dependency>
-						<groupId>com.sun.xml.ws</groupId>
-						<artifactId>jaxws-tools</artifactId>
-						<version>2.2.5</version>
-					</dependency>
-				</dependencies>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.3</version>
-				<executions>
-					<execution>
-						<phase>validate</phase>
-						<goals>
-							<goal>copy</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${project.build.directory}/endorsed</outputDirectory>
-							<silent>true</silent>
-							<artifactItems>
-								<artifactItem>
-									<groupId>javax.xml.bind</groupId>
-									<artifactId>jaxb-api</artifactId>
-									<version>2.2.7</version>
-									<type>jar</type>
-								</artifactItem>
-								<artifactItem>
-									<groupId>javax.xml.ws</groupId>
-									<artifactId>jaxws-api</artifactId>
-									<version>2.2.9</version>
-									<type>jar</type>
-								</artifactItem>
-							</artifactItems>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-
-			<!-- DEBUG -->
-			<!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>jaxws-maven-plugin</artifactId> 
-				<version>1.10</version> <executions> <execution> <goals> <goal>wsgen</goal> 
-				</goals> </execution> </executions> <configuration> <sei>org.mako.lastproto.MyServiceImpl</sei> 
-				</configuration> <dependencies> <dependency> <groupId>com.sun.xml.ws</groupId> 
-				<artifactId>jaxws-tools</artifactId> <version>2.2.5</version> </dependency> 
-				</dependencies> </plugin> -->
-
-			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-jar-plugin</artifactId> 
-				<configuration> <archive> <manifest> <addDefaultImplementationEntries>true</addDefaultImplementationEntries> 
-				<addClasspath>true</addClasspath> <classpathPrefix>lib/</classpathPrefix> 
-				<mainClass>org.elte.hadoop.loris.server.Publisher</mainClass> </manifest> 
-				</archive> </configuration> </plugin> -->
-
-			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-dependency-plugin</artifactId> 
-				<version>2.5.1</version> <executions> <execution> <id>copy-dependencies</id> 
-				<phase>package</phase> <goals> <goal>copy-dependencies</goal> </goals> <configuration> 
-				<outputDirectory>${project.build.directory}/lib/</outputDirectory> </configuration> 
-				</execution> </executions> </plugin> -->
-
-			<!-- <plugin> <artifactId>maven-assembly-plugin</artifactId> <version>2.4.1</version> 
-				<configuration> <descriptorRefs> <descriptorRef>jar-with-dependencies</descriptorRef> 
-				</descriptorRefs> <archive> <manifest> <addDefaultImplementationEntries>true</addDefaultImplementationEntries> 
-				<addClasspath>true</addClasspath> <classpathPrefix>lib/</classpathPrefix> 
-				<mainClass>org.elte.hadoop.loris.server.Publisher</mainClass> </manifest> 
-				</archive> </configuration> <executions> <execution> <id>make-assembly</id> 
-				this is used for inheritance merges <phase>package</phase> bind to the packaging 
-				phase <goals> <goal>single</goal> </goals> </execution> </executions> </plugin> -->
 		</plugins>
+
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh-external</artifactId>
+				<version>1.0-beta-6</version>
+			</extension>
+		</extensions>
 	</build>
+
+	<distributionManagement>
+		<repository>
+			<id>ssh-repository</id>
+			<url>scpexe://52.17.67.155:/home/ubuntu/workspace/loris</url>
+		</repository>
+	</distributionManagement>
 
 </project>
